<resources>
    <string name="app_name">Generar QR</string>
    <string name="generate_qr">Generar QR</string>
    <string name="generate_new_qr">Generar nuevo QR</string>
    <string name="qr">QR</string>
    <string name="tvOk">QR leido correctamente :)</string>
    <string name="titleLogin">Login to Generate QR</string>
    <string name="descriptionLogin">Nosotros te enviaremos un SMS como password a tu número de celular</string>
    <string name="tvInputNumber">Ingresa el número de celular</string>
    <string name="inputNumberHint">1234567890</string>
    <string name="_57">+57-</string>
    <string name="buttonLogin">Enviar SMS</string>
    <string name="tvOTPDescription">Ingresa el OTP enviado</string>
    <string name="titleOTP">Verificación OTP</string>
    <string name="no_recibes_el_otp">¿No recibes el OTP?</string>
    <string name="resend">Reenviar</string>
    <string name="buttonVerify">Verificar</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="take_photo">Take photo</string>
    <string name="open_camera">Abrir cámara</string>
</resources>